/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package clases;

/**
 *
 * @author gab-uwu
 */
public class VariablesGlobales {
    public static final String ANSI_CYAN = "\u001B[36m";
    float[] lados;
    float lado,area, perimetro,base,altura,apotema;
}


